<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/title_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|start"
            android:minHeight="64dip"
            android:paddingLeft="10dp">
            <com.android.internal.widget.DialogTitle
                android:id="@+id/alertTitle"
                style="@android:style/TextAppearance.Holo.DialogWindowTitle"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:id="@+id/titleDivider"
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:visibility="visible"
            android:background="@android:color/holo_blue_light" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollViewdialog" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView_selSeries_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/sel_series_string"/>

                <Spinner
                    android:id="@+id/series_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/textView_selSeries_string" />

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/textViewPortataString"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/portata_string_unit" />

                <TextView
                    android:id="@+id/textView_minPortata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewPortataString"
                    android:layout_alignLeft="@+id/textViewPortataString"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView_maxPortata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView_minPortata"
                    android:layout_alignParentRight="true"
                    android:textStyle="bold" />

                <com.edmodo.rangebar.RangeBar
                    xmlns:custom="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/rangebarPortata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_minPortata"
                    custom:barColor="@color/italsimegreenahcg_color"
                    custom:connectingLineColor="@color/italsimegreenahcg_color"
                    custom:thumbImageNormal="@drawable/italsimegreenahcg_scrubber_control_normal_holo"
                    custom:thumbImagePressed="@drawable/italsimegreenahcg_scrubber_control_pressed_holo"
                    custom:tickHeight="0dip" />

                <CheckBox
                    android:id="@+id/checkbox_portata_manually"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rangebarPortata"
                    android:layout_alignLeft="@+id/rangebarPortata"
                    android:layout_marginTop="10dp"
                    android:text="@string/set_manually_string"/>

                <RelativeLayout
                    android:id="@+id/layout_editstext_portata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_below="@+id/checkbox_portata_manually"
                    android:layout_alignLeft="@+id/rangebarPortata">

                    <TextView
                        android:id="@+id/textViewMinStringPo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_alignParentLeft="true"
                        android:text="@string/min_string" />

                    <EditText
                        android:id="@+id/editTextMinPortata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/textViewMinStringPo"
                        android:layout_toRightOf="@+id/textViewMinStringPo"
                        android:ems="4"
                        android:maxLength="5"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionDone">
                    </EditText>

                    <EditText
                        android:id="@+id/editTextMaxPortata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/editTextMinPortata"
                        android:layout_alignBottom="@+id/editTextMinPortata"
                        android:layout_alignParentRight="true"
                        android:ems="4"
                        android:maxLength="5"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionDone" />

                    <TextView
                        android:id="@+id/TextViewMaxPortataPo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/editTextMaxPortata"
                        android:layout_toLeftOf="@+id/editTextMaxPortata"
                        android:text="@string/max_string" />

                </RelativeLayout>

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textViewPressioneString"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/pressure_string_unit" />

                <TextView
                    android:id="@+id/textView_minPressione"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewPressioneString"
                    android:layout_alignLeft="@+id/textViewPressioneString"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_maxPressione"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView_minPressione"
                    android:layout_alignParentRight="true"
                    android:textStyle="bold" />

                <com.edmodo.rangebar.RangeBar
                    xmlns:custom="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/rangebarPressione"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_minPressione"
                    custom:barColor="@color/italsimegreenahcg_color"
                    custom:connectingLineColor="@color/italsimegreenahcg_color"
                    custom:thumbImageNormal="@drawable/italsimegreenahcg_scrubber_control_normal_holo"
                    custom:thumbImagePressed="@drawable/italsimegreenahcg_scrubber_control_pressed_holo"
                    custom:tickHeight="0dip" />

                <CheckBox
                    android:id="@+id/checkbox_pressione_manually"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rangebarPressione"
                    android:layout_alignLeft="@+id/rangebarPressione"
                    android:layout_marginTop="10dp"
                    android:text="@string/set_manually_string"/>

                <RelativeLayout
                    android:id="@+id/layout_editstext_pressione"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_below="@+id/checkbox_pressione_manually"
                    android:layout_alignLeft="@+id/rangebarPressione">

                    <TextView
                        android:id="@+id/textViewMinStringPr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_alignParentLeft="true"
                        android:text="@string/min_string" />

                    <EditText
                        android:id="@+id/editTextMinPressione"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/textViewMinStringPr"
                        android:layout_toRightOf="@+id/textViewMinStringPr"
                        android:ems="4"
                        android:maxLength="4"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionDone" >
                    </EditText>

                    <EditText
                        android:id="@+id/editTextMaxPressione"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/editTextMinPressione"
                        android:layout_alignBottom="@+id/editTextMinPressione"
                        android:layout_alignParentRight="true"
                        android:ems="4"
                        android:maxLength="4"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionDone" />

                    <TextView
                        android:id="@+id/TextViewMaxPortata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/editTextMaxPressione"
                        android:layout_toLeftOf="@+id/editTextMaxPressione"
                        android:text="@string/max_string" />

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
